<?xml version="1.0" encoding="utf-8"?>

<!-- relative layout holds 2 components:
  - a scrollview with the preferences and
  - a linearlayout bar for the buttons
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

    <!-- most important part for relative layout is layout_above; tells how to inflate this component !!! -->
    <!-- second lesson learned: id MUST be given, otherwise class cast exception will occur at creation time  -->
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/scrollableContentHolder"
                android:scrollbars="none"
                android:orientation="vertical"
                android:layout_alignParentTop="true"
                android:layout_above="@+id/barOkCancel"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">


            <!-- select target day -->
            <DatePicker xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/pickerTargetDate"
                    android:layout_marginTop="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">
            </DatePicker>
            <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="7dp"
                    android:layout_marginTop="7dp"
                    android:background="@android:color/white" />

            <!-- show days: calendar and/or weekdays -->
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:orientation="vertical"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content">
                <Spinner
                        android:id="@+id/spinnerShowDays"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:prompt="@string/pref_show_days_prompt"
                        android:entries="@array/pref_show_days_array"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="58dp"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/pref_show_days_summary"
                        android:maxLines="2"/>
            </LinearLayout>
            <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="7dp"
                    android:layout_marginTop="7dp"
                    android:background="@android:drawable/divider_horizontal_bright" />

            <!-- select progress -->
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:orientation="horizontal"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content">
                <CheckBox
                        android:id="@+id/checkBoxShowProgress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>
                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                              android:orientation="vertical"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/pref_show_progress"/>
                    <TextView
                            android:id="@+id/textShowProgress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:maxLines="2"/>
                </LinearLayout>
                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                android:orientation="horizontal"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content">
                    <Button
                            android:id="@+id/buttonStartDate"
                            style="@style/ButtonTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:background="@drawable/black_button"
                            android:text="@string/label_start_date"/>
                </RelativeLayout>
            </LinearLayout>
            <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="7dp"
                    android:layout_marginTop="7dp"
                    android:background="@android:color/white" />

            <!-- select background image -->
            <peregin.android.countdown.ImageReel xmlns:android="http://schemas.android.com/apk/res/android"
                                                 android:id="@+id/galleryBack"
                                                 android:layout_marginLeft="10dp"
                                                 android:layout_marginRight="10dp"
                                                 android:layout_width="fill_parent"
                                                 android:layout_height="wrap_content"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="60dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/pref_choose_background_summary"
                    android:maxLines="2"/>
            <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="7dp"
                    android:layout_marginTop="7dp"
                    android:background="@android:color/white" />
            
            <!-- choose transparency -->
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="0%"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
	            <TextView
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:gravity="right"
	                android:text="80%"
	                android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
            <SeekBar
                    android:id="@+id/seekBarAlpha"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="5dip"
                    android:minHeight="5dip"
                    android:paddingBottom="2dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                     />
            
            <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:paddingLeft="60dp"
                   android:textAppearance="?android:attr/textAppearanceSmall"
                   android:text="@string/pref_choose_alpha"/>
            <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="7dp"
                    android:layout_marginTop="7dp"
                    android:background="@android:color/white" />

            <!-- customize event name -->
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:orientation="horizontal"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content">
                <CheckBox
                        android:id="@+id/checkBoxEventName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>
                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                              android:orientation="vertical"
                              android:layout_marginRight="10dp"
                              android:layout_width="fill_parent"
                              android:layout_height="wrap_content">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/pref_show_event_name"/>
                    <EditText
                            android:id="@+id/editTextEventName"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/pref_event_name_hint"
                            android:inputType="text">
                    </EditText>
                </LinearLayout>
            </LinearLayout>
            <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="7dp"
                    android:layout_marginTop="7dp"
                    android:background="@android:color/white" />
        </LinearLayout>
    </ScrollView>


    <!-- anchor ok/cancel buttons at the bottom of the view -->
    <LinearLayout android:id="@+id/barOkCancel"
                  style="@android:style/ButtonBar"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_alignParentBottom="true"
                  android:layout_centerHorizontal="true"
                  android:paddingTop="5dp"
                  android:paddingBottom="5dp"
                  android:paddingLeft="10dp"
                  android:paddingRight="10dp"
                  android:orientation="horizontal">
        <Button android:text="@string/label_ok"
                android:id="@+id/buttonOk"
                android:background="@drawable/black_button"
                style="@style/ButtonTextStyle"
                android:layout_gravity="center"
                android:layout_width="150dip"
                android:layout_height="wrap_content">
        </Button>
        <Button android:text="@string/label_cancel"
                android:id="@+id/buttonCancel"
                android:background="@drawable/black_button"
                style="@style/ButtonTextStyle"
                android:layout_gravity="center"
                android:layout_width="150dip"
                android:layout_height="wrap_content">
        </Button>
    </LinearLayout>


</RelativeLayout>